// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can resolve a corePlugins object 1`] = `Object {}`;

exports[`can resolve a plugins array 1`] = `Array []`;

exports[`can resolve a prefix string 1`] = `""`;

exports[`can resolve a separator string 1`] = `":"`;

exports[`can resolve a theme object 1`] = `
Object {
  "backgroundColor": Object {
    "test": "#123456",
  },
  "backgroundPosition": Object {
    "bottom": "bottom",
    "center": "center",
    "left": "left",
    "left-bottom": "left bottom",
    "left-top": "left top",
    "right": "right",
    "right-bottom": "right bottom",
    "right-top": "right top",
    "top": "top",
  },
  "backgroundSize": Object {
    "auto": "auto",
    "contain": "contain",
    "cover": "cover",
  },
  "borderColor": Object {
    "default": "currentColor",
    "test": "#123456",
  },
  "borderRadius": Object {
    "default": ".25rem",
    "full": "9999px",
    "lg": ".5rem",
    "none": "0",
    "sm": ".125rem",
  },
  "borderWidth": Object {
    "0": "0",
    "2": "2px",
    "4": "4px",
    "8": "8px",
    "default": "1px",
  },
  "boxShadow": Object {
    "2xl": "0 25px 50px -12px rgba(0, 0, 0, .25)",
    "default": "0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06)",
    "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
    "lg": "0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05)",
    "md": "0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06)",
    "none": "none",
    "outline": "0 0 0 3px rgba(66,153,225,0.5)",
    "xl": "0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04)",
  },
  "colors": Object {
    "test": "#123456",
  },
  "container": Object {},
  "cursor": Object {
    "auto": "auto",
    "default": "default",
    "move": "move",
    "not-allowed": "not-allowed",
    "pointer": "pointer",
    "wait": "wait",
  },
  "fill": Object {
    "current": "currentColor",
  },
  "flex": Object {
    "1": "1 1 0%",
    "auto": "1 1 auto",
    "initial": "0 1 auto",
    "none": "none",
  },
  "flexGrow": Object {
    "0": 0,
    "default": 1,
  },
  "flexShrink": Object {
    "0": 0,
    "default": 1,
  },
  "fontFamily": Object {
    "mono": Array [
      "Menlo",
      "Monaco",
      "Consolas",
      "\\"Liberation Mono\\"",
      "\\"Courier New\\"",
      "monospace",
    ],
    "sans": Array [
      "-apple-system",
      "BlinkMacSystemFont",
      "\\"Segoe UI\\"",
      "Roboto",
      "\\"Helvetica Neue\\"",
      "Arial",
      "\\"Noto Sans\\"",
      "sans-serif",
      "\\"Apple Color Emoji\\"",
      "\\"Segoe UI Emoji\\"",
      "\\"Segoe UI Symbol\\"",
      "\\"Noto Color Emoji\\"",
    ],
    "serif": Array [
      "Georgia",
      "Cambria",
      "\\"Times New Roman\\"",
      "Times",
      "serif",
    ],
  },
  "fontSize": Object {
    "2xl": "1.5rem",
    "3xl": "1.875rem",
    "4xl": "2.25rem",
    "5xl": "3rem",
    "6xl": "4rem",
    "base": "1rem",
    "lg": "1.125rem",
    "sm": ".875rem",
    "xl": "1.25rem",
    "xs": ".75rem",
  },
  "fontWeight": Object {
    "black": 900,
    "bold": 700,
    "extrabold": 800,
    "hairline": 100,
    "light": 300,
    "medium": 500,
    "normal": 400,
    "semibold": 600,
    "thin": 200,
  },
  "height": Object {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "32": "8rem",
    "4": "1rem",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "auto": "auto",
    "full": "100%",
    "px": "1px",
    "screen": "100vh",
  },
  "inset": Object {
    "0": 0,
    "auto": "auto",
  },
  "letterSpacing": Object {
    "normal": "0",
    "tight": "-.025em",
    "tighter": "-.05em",
    "wide": ".025em",
    "wider": ".05em",
    "widest": ".1em",
  },
  "lineHeight": Object {
    "loose": 2,
    "none": 1,
    "normal": 1.5,
    "relaxed": 1.625,
    "snug": 1.375,
    "tight": 1.25,
  },
  "listStyleType": Object {
    "decimal": "decimal",
    "disc": "disc",
    "none": "none",
  },
  "margin": Object {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "32": "8rem",
    "4": "1rem",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "auto": "auto",
    "px": "1px",
  },
  "maxHeight": Object {
    "full": "100%",
    "screen": "100vh",
  },
  "maxWidth": Object {
    "2xl": "42rem",
    "3xl": "48rem",
    "4xl": "56rem",
    "5xl": "64rem",
    "6xl": "72rem",
    "full": "100%",
    "lg": "32rem",
    "md": "28rem",
    "sm": "24rem",
    "xl": "36rem",
    "xs": "20rem",
  },
  "minHeight": Object {
    "0": "0",
    "full": "100%",
    "screen": "100vh",
  },
  "minWidth": Object {
    "0": "0",
    "full": "100%",
  },
  "negativeMargin": Object {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "32": "8rem",
    "4": "1rem",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "px": "1px",
  },
  "objectPosition": Object {
    "bottom": "bottom",
    "center": "center",
    "left": "left",
    "left-bottom": "left bottom",
    "left-top": "left top",
    "right": "right",
    "right-bottom": "right bottom",
    "right-top": "right top",
    "top": "top",
  },
  "opacity": Object {
    "0": "0",
    "100": "1",
    "25": ".25",
    "50": ".5",
    "75": ".75",
  },
  "padding": Object {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "32": "8rem",
    "4": "1rem",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "px": "1px",
  },
  "screens": Object {
    "lg": "1024px",
    "md": "768px",
    "sm": "640px",
    "xl": "1280px",
  },
  "spacing": Object {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "32": "8rem",
    "4": "1rem",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "px": "1px",
  },
  "stroke": Object {
    "current": "currentColor",
  },
  "textColor": Object {
    "test": "#123456",
  },
  "width": Object {
    "0": "0",
    "1": "0.25rem",
    "1/2": "50%",
    "1/3": "33.33333%",
    "1/4": "25%",
    "1/5": "20%",
    "1/6": "16.66667%",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "2/3": "66.66667%",
    "2/5": "40%",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "3/4": "75%",
    "3/5": "60%",
    "32": "8rem",
    "4": "1rem",
    "4/5": "80%",
    "40": "10rem",
    "48": "12rem",
    "5": "1.25rem",
    "5/6": "83.33333%",
    "56": "14rem",
    "6": "1.5rem",
    "64": "16rem",
    "8": "2rem",
    "auto": "auto",
    "full": "100%",
    "px": "1px",
    "screen": "100vw",
  },
  "zIndex": Object {
    "0": 0,
    "10": 10,
    "20": 20,
    "30": 30,
    "40": 40,
    "50": 50,
    "auto": "auto",
  },
}
`;

exports[`can resolve a variants object 1`] = `
Object {
  "alignContent": Array [
    "responsive",
  ],
  "alignItems": Array [
    "responsive",
  ],
  "alignSelf": Array [
    "responsive",
  ],
  "appearance": Array [
    "responsive",
  ],
  "backgroundAttachment": Array [
    "responsive",
  ],
  "backgroundColor": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "backgroundPosition": Array [
    "responsive",
  ],
  "backgroundRepeat": Array [
    "responsive",
  ],
  "backgroundSize": Array [
    "responsive",
  ],
  "borderCollapse": Array [],
  "borderColor": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "borderRadius": Array [
    "responsive",
  ],
  "borderStyle": Array [
    "responsive",
  ],
  "borderWidth": Array [
    "responsive",
  ],
  "boxShadow": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "cursor": Array [
    "responsive",
  ],
  "display": Array [
    "responsive",
  ],
  "fill": Array [],
  "flex": Array [
    "responsive",
  ],
  "flexDirection": Array [
    "responsive",
  ],
  "flexGrow": Array [
    "responsive",
  ],
  "flexShrink": Array [
    "responsive",
  ],
  "flexWrap": Array [
    "responsive",
  ],
  "float": Array [
    "responsive",
  ],
  "fontFamily": Array [
    "responsive",
  ],
  "fontSize": Array [
    "responsive",
  ],
  "fontSmoothing": Array [
    "responsive",
  ],
  "fontStyle": Array [
    "responsive",
  ],
  "fontWeight": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "height": Array [
    "responsive",
  ],
  "inset": Array [
    "responsive",
  ],
  "justifyContent": Array [
    "responsive",
  ],
  "letterSpacing": Array [
    "responsive",
  ],
  "lineHeight": Array [
    "responsive",
  ],
  "listStylePosition": Array [
    "responsive",
  ],
  "listStyleType": Array [
    "responsive",
  ],
  "margin": Array [
    "responsive",
  ],
  "maxHeight": Array [
    "responsive",
  ],
  "maxWidth": Array [
    "responsive",
  ],
  "minHeight": Array [
    "responsive",
  ],
  "minWidth": Array [
    "responsive",
  ],
  "negativeMargin": Array [
    "responsive",
  ],
  "objectFit": Array [
    "responsive",
  ],
  "objectPosition": Array [
    "responsive",
  ],
  "opacity": Array [
    "responsive",
  ],
  "outline": Array [
    "focus",
  ],
  "overflow": Array [
    "responsive",
  ],
  "padding": Array [
    "responsive",
  ],
  "pointerEvents": Array [
    "responsive",
  ],
  "position": Array [
    "responsive",
  ],
  "resize": Array [
    "responsive",
  ],
  "stroke": Array [],
  "tableLayout": Array [
    "responsive",
  ],
  "textAlign": Array [
    "responsive",
  ],
  "textColor": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "textDecoration": Array [
    "responsive",
    "hover",
    "focus",
  ],
  "textTransform": Array [
    "responsive",
  ],
  "userSelect": Array [
    "responsive",
  ],
  "verticalAlign": Array [
    "responsive",
  ],
  "visibility": Array [
    "responsive",
  ],
  "whitespace": Array [
    "responsive",
  ],
  "width": Array [
    "responsive",
  ],
  "wordBreak": Array [
    "responsive",
  ],
  "zIndex": Array [
    "responsive",
  ],
}
`;

exports[`can resolve an important boolean 1`] = `false`;

exports[`can resolve when passed a config object 1`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "separator": ":",
  "theme": Object {
    "backgroundColor": Object {
      "test": "#123456",
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "default": "currentColor",
      "test": "#123456",
    },
    "borderRadius": Object {
      "default": ".25rem",
      "full": "9999px",
      "lg": ".5rem",
      "none": "0",
      "sm": ".125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, .25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06)",
      "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66,153,225,0.5)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04)",
    },
    "colors": Object {
      "test": "#123456",
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "wait": "wait",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": 0,
      "default": 1,
    },
    "flexShrink": Object {
      "0": 0,
      "default": 1,
    },
    "fontFamily": Object {
      "mono": Array [
        "Menlo",
        "Monaco",
        "Consolas",
        "\\"Liberation Mono\\"",
        "\\"Courier New\\"",
        "monospace",
      ],
      "sans": Array [
        "-apple-system",
        "BlinkMacSystemFont",
        "\\"Segoe UI\\"",
        "Roboto",
        "\\"Helvetica Neue\\"",
        "Arial",
        "\\"Noto Sans\\"",
        "sans-serif",
        "\\"Apple Color Emoji\\"",
        "\\"Segoe UI Emoji\\"",
        "\\"Segoe UI Symbol\\"",
        "\\"Noto Color Emoji\\"",
      ],
      "serif": Array [
        "Georgia",
        "Cambria",
        "\\"Times New Roman\\"",
        "Times",
        "serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": ".875rem",
      "xl": "1.25rem",
      "xs": ".75rem",
    },
    "fontWeight": Object {
      "black": 900,
      "bold": 700,
      "extrabold": 800,
      "hairline": 100,
      "light": 300,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
      "thin": 200,
    },
    "height": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": 0,
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-.025em",
      "tighter": "-.05em",
      "wide": ".025em",
      "wider": ".05em",
      "widest": ".1em",
    },
    "lineHeight": Object {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "full": "100%",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "full": "100%",
      "lg": "32rem",
      "md": "28rem",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
    },
    "negativeMargin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": ".25",
      "50": ".5",
      "75": ".75",
    },
    "padding": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "spacing": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "textColor": Object {
      "test": "#123456",
    },
    "width": Object {
      "0": "0",
      "1": "0.25rem",
      "1/2": "50%",
      "1/3": "33.33333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.66667%",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "2/3": "66.66667%",
      "2/5": "40%",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "3/4": "75%",
      "3/5": "60%",
      "32": "8rem",
      "4": "1rem",
      "4/5": "80%",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.33333%",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": 0,
      "10": 10,
      "20": 20,
      "30": 30,
      "40": 40,
      "50": 50,
      "auto": "auto",
    },
  },
  "variants": Object {
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "fill": Array [],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "negativeMargin": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
    ],
    "outline": Array [
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "stroke": Array [],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;

exports[`can resolve when passed a config path 1`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "separator": ":",
  "theme": Object {
    "backgroundColor": Object {
      "test": "#123456",
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "default": "currentColor",
      "test": "#123456",
    },
    "borderRadius": Object {
      "default": ".25rem",
      "full": "9999px",
      "lg": ".5rem",
      "none": "0",
      "sm": ".125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, .25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06)",
      "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66,153,225,0.5)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04)",
    },
    "colors": Object {
      "test": "#123456",
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "wait": "wait",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": 0,
      "default": 1,
    },
    "flexShrink": Object {
      "0": 0,
      "default": 1,
    },
    "fontFamily": Object {
      "mono": Array [
        "Menlo",
        "Monaco",
        "Consolas",
        "\\"Liberation Mono\\"",
        "\\"Courier New\\"",
        "monospace",
      ],
      "sans": Array [
        "-apple-system",
        "BlinkMacSystemFont",
        "\\"Segoe UI\\"",
        "Roboto",
        "\\"Helvetica Neue\\"",
        "Arial",
        "\\"Noto Sans\\"",
        "sans-serif",
        "\\"Apple Color Emoji\\"",
        "\\"Segoe UI Emoji\\"",
        "\\"Segoe UI Symbol\\"",
        "\\"Noto Color Emoji\\"",
      ],
      "serif": Array [
        "Georgia",
        "Cambria",
        "\\"Times New Roman\\"",
        "Times",
        "serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": ".875rem",
      "xl": "1.25rem",
      "xs": ".75rem",
    },
    "fontWeight": Object {
      "black": 900,
      "bold": 700,
      "extrabold": 800,
      "hairline": 100,
      "light": 300,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
      "thin": 200,
    },
    "height": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": 0,
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-.025em",
      "tighter": "-.05em",
      "wide": ".025em",
      "wider": ".05em",
      "widest": ".1em",
    },
    "lineHeight": Object {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "full": "100%",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "full": "100%",
      "lg": "32rem",
      "md": "28rem",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
    },
    "negativeMargin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": ".25",
      "50": ".5",
      "75": ".75",
    },
    "padding": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "spacing": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "textColor": Object {
      "test": "#123456",
    },
    "width": Object {
      "0": "0",
      "1": "0.25rem",
      "1/2": "50%",
      "1/3": "33.33333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.66667%",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "2/3": "66.66667%",
      "2/5": "40%",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "3/4": "75%",
      "3/5": "60%",
      "32": "8rem",
      "4": "1rem",
      "4/5": "80%",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.33333%",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": 0,
      "10": 10,
      "20": 20,
      "30": 30,
      "40": 40,
      "50": 50,
      "auto": "auto",
    },
  },
  "variants": Object {
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "fill": Array [],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "negativeMargin": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
    ],
    "outline": Array [
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "stroke": Array [],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;

exports[`can resolve when passed nothing 1`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "separator": ":",
  "theme": Object {
    "backgroundColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "borderRadius": Object {
      "default": ".25rem",
      "full": "9999px",
      "lg": ".5rem",
      "none": "0",
      "sm": ".125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, .25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06)",
      "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66,153,225,0.5)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04)",
    },
    "colors": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "wait": "wait",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": 0,
      "default": 1,
    },
    "flexShrink": Object {
      "0": 0,
      "default": 1,
    },
    "fontFamily": Object {
      "mono": Array [
        "Menlo",
        "Monaco",
        "Consolas",
        "\\"Liberation Mono\\"",
        "\\"Courier New\\"",
        "monospace",
      ],
      "sans": Array [
        "-apple-system",
        "BlinkMacSystemFont",
        "\\"Segoe UI\\"",
        "Roboto",
        "\\"Helvetica Neue\\"",
        "Arial",
        "\\"Noto Sans\\"",
        "sans-serif",
        "\\"Apple Color Emoji\\"",
        "\\"Segoe UI Emoji\\"",
        "\\"Segoe UI Symbol\\"",
        "\\"Noto Color Emoji\\"",
      ],
      "serif": Array [
        "Georgia",
        "Cambria",
        "\\"Times New Roman\\"",
        "Times",
        "serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": ".875rem",
      "xl": "1.25rem",
      "xs": ".75rem",
    },
    "fontWeight": Object {
      "black": 900,
      "bold": 700,
      "extrabold": 800,
      "hairline": 100,
      "light": 300,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
      "thin": 200,
    },
    "height": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": 0,
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-.025em",
      "tighter": "-.05em",
      "wide": ".025em",
      "wider": ".05em",
      "widest": ".1em",
    },
    "lineHeight": Object {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "full": "100%",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "full": "100%",
      "lg": "32rem",
      "md": "28rem",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
    },
    "negativeMargin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": ".25",
      "50": ".5",
      "75": ".75",
    },
    "padding": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "spacing": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "textColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "width": Object {
      "0": "0",
      "1": "0.25rem",
      "1/2": "50%",
      "1/3": "33.33333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.66667%",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "2/3": "66.66667%",
      "2/5": "40%",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "3/4": "75%",
      "3/5": "60%",
      "32": "8rem",
      "4": "1rem",
      "4/5": "80%",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.33333%",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": 0,
      "10": 10,
      "20": 20,
      "30": 30,
      "40": 40,
      "50": 50,
      "auto": "auto",
    },
  },
  "variants": Object {
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "fill": Array [],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "negativeMargin": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
    ],
    "outline": Array [
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "stroke": Array [],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;

exports[`can resolve when passed nothing 2`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "separator": ":",
  "theme": Object {
    "backgroundColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "borderRadius": Object {
      "default": ".25rem",
      "full": "9999px",
      "lg": ".5rem",
      "none": "0",
      "sm": ".125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, .25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06)",
      "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66,153,225,0.5)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04)",
    },
    "colors": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "wait": "wait",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": 0,
      "default": 1,
    },
    "flexShrink": Object {
      "0": 0,
      "default": 1,
    },
    "fontFamily": Object {
      "mono": Array [
        "Menlo",
        "Monaco",
        "Consolas",
        "\\"Liberation Mono\\"",
        "\\"Courier New\\"",
        "monospace",
      ],
      "sans": Array [
        "-apple-system",
        "BlinkMacSystemFont",
        "\\"Segoe UI\\"",
        "Roboto",
        "\\"Helvetica Neue\\"",
        "Arial",
        "\\"Noto Sans\\"",
        "sans-serif",
        "\\"Apple Color Emoji\\"",
        "\\"Segoe UI Emoji\\"",
        "\\"Segoe UI Symbol\\"",
        "\\"Noto Color Emoji\\"",
      ],
      "serif": Array [
        "Georgia",
        "Cambria",
        "\\"Times New Roman\\"",
        "Times",
        "serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": ".875rem",
      "xl": "1.25rem",
      "xs": ".75rem",
    },
    "fontWeight": Object {
      "black": 900,
      "bold": 700,
      "extrabold": 800,
      "hairline": 100,
      "light": 300,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
      "thin": 200,
    },
    "height": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": 0,
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-.025em",
      "tighter": "-.05em",
      "wide": ".025em",
      "wider": ".05em",
      "widest": ".1em",
    },
    "lineHeight": Object {
      "loose": 2,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "snug": 1.375,
      "tight": 1.25,
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "full": "100%",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "full": "100%",
      "lg": "32rem",
      "md": "28rem",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
    },
    "negativeMargin": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": ".25",
      "50": ".5",
      "75": ".75",
    },
    "padding": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "spacing": Object {
      "0": "0",
      "1": "0.25rem",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "32": "8rem",
      "4": "1rem",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "textColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "width": Object {
      "0": "0",
      "1": "0.25rem",
      "1/2": "50%",
      "1/3": "33.33333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.66667%",
      "10": "2.5rem",
      "12": "3rem",
      "16": "4rem",
      "2": "0.5rem",
      "2/3": "66.66667%",
      "2/5": "40%",
      "20": "5rem",
      "24": "6rem",
      "3": "0.75rem",
      "3/4": "75%",
      "3/5": "60%",
      "32": "8rem",
      "4": "1rem",
      "4/5": "80%",
      "40": "10rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.33333%",
      "56": "14rem",
      "6": "1.5rem",
      "64": "16rem",
      "8": "2rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": 0,
      "10": 10,
      "20": 20,
      "30": 30,
      "40": 40,
      "50": 50,
      "auto": "auto",
    },
  },
  "variants": Object {
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "fill": Array [],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "negativeMargin": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
    ],
    "outline": Array [
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "stroke": Array [],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;
